--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
     </div>
   </nav>
   <div class="photo">
-    <img src="./img/trav.jpg" alt="" width="100%" height="500px">
+    <img src="./img/trav.jpg" alt="">
   </div>
-  <div class="about"><h1 style="text-align: start;">About Us</h1>
+  <div class="about" style="padding-left: 30px;"><h1 style="text-align: start;">About Us</h1>
   <p>At TripyHolidays Travels, we believe that every journey should be unforgettable. Our mission is to inspire, plan, and deliver exceptional travel experiences for every kind of traveler – whether you're chasing adventure, seeking relaxation, or exploring new cultures.</p>
   <h1 style="text-align: start;">What We Offer</h1>
   <p><b>Tailor-made Tours </b> – Personalized travel experiences to match your interests and style.</p>
@@ -94,7 +94,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved.</p>
+    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved|Designed by kabileswaran A</p>
   </div>
 </footer>
 </body>
