--- a/hotel.html
+++ b/hotel.html
@@ -132,7 +132,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved.</p>
+    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved|Designed by kabileswaran A</p>
   </div>
 </footer>
  
