--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <div class="footer-container">
     <div class="footer-section about">
       <h3>About Us</h3>
-      <p>TravelXplore helps you discover the world’s best destinations with expert tips, guides, and easy bookings.</p>
+      <p>Tripy Holidays helps you discover the world’s best destinations with expert tips, guides, and easy bookings.</p>
     </div>
 
     <div class="footer-section links">
@@ -230,7 +230,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved.</p>
+    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved|Designed by kabileswaran A</p>
   </div>
 </footer>
 
