--- a/package.html
+++ b/package.html
@@ -45,7 +45,7 @@
   </nav>
 
   <section class="tour-plan-section">
-    <h2 style="font-family: 'Playfair Display', serif; color: #333333;">Tour Plan for delhi</h2>
+    <h2 style="font-family: 'Playfair Display', serif; color: #333333;"> Delhi Tour Plan</h2>
     <table class="tour-table">
       <thead>
         <tr>
@@ -92,6 +92,9 @@
   </div>
   <div class="img1">
   <img src="./img/delhi_images_copy.107113609.jpg" alt="" height="200px" width="240px">
+  </div>
+  <div class="img1">
+  <img src="./img/Delhi-Akshardham_Temple.jpg" alt="" height="200px" width="240px">
   </div>
   </div>
   <section class="tour-plan-section">
@@ -149,6 +152,9 @@
   <div class="img1">
   <img src="./img/lon3.jpg" alt="" height="200px" width="240px">
   </div>
+  <div class="img1">
+  <img src="./img/panorama-city-of-london.jpg" alt="" height="200px" width="240px">
+  </div>
   </div>
   <div class="more">
     <a href="">click here to see more plans&nbsp;&nbsp;<i class="fa-solid fa-arrow-right"></i></a>
@@ -186,7 +192,7 @@
   </div>
 
   <div class="footer-bottom">
-    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved.</p>
+    <p style="color: #006655;">&copy; 2025 Tripy holidays. All rights reserved|Designed by kabileswaran A</p>
   </div>
 </footer>
 
